tg-7824 [FE] Las ordenes de internación deben estar disponibles para episodios sin epicrisis

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -250,8 +250,9 @@
 						</ng-template>
 						<ng-template matTabContent>
 							<app-card-estudios [patientId]="patientId"
-								[diagnosticReportsStatus]="diagnosticReportsStatus$ | async"
-								[categories]="studyCategories$ | async">
+								   [epicrisisConfirmed]="epicrisisDoc?.confirmed"
+								   [diagnosticReportsStatus]="diagnosticReportsStatus$ | async"
+								   [categories]="studyCategories$ | async">
 							</app-card-estudios>
 							<app-card-indicaciones [patientId]="patientId" *ngIf="false"></app-card-indicaciones>
 						</ng-template>
