tg-7891 [Mejora] Se debe visualizar foto de usuario en menu colapsable de pantalla home al ingresar a la app con un usuario

--- a/front-end/apps/projects/hospital/src/app/modules/home/home.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/home/home.component.html
@@ -1,6 +1,13 @@
 <ng-container *ngIf="(menuItems$ | async) as menuItems; else loading">
 	<app-main-layout [menuItems]="menuItems">
+		<app-user-badge account-info-min
+			[hideName]="true"
+			[userInfo]="userInfo"
+			[routerLink]="userProfileLink"
+			routerLinkActive="headers-card-background"
+		></app-user-badge>
 		<app-user-badge account-info
+			[hideName]="false"
 			[userInfo]="userInfo"
 			[routerLink]="userProfileLink"
 			routerLinkActive="headers-card-background"
