tg-7893 [P2] No se muestra erro de contraseña incorrecta con el campo vacío

--- a/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.html
@@ -11,12 +11,15 @@
 				</mat-card-subtitle>
 			</mat-card-header>
 			<mat-card-content fxLayout="column" fxLayoutGap="12px">
-					<mat-form-field [floatLabel]="'never'" appearance="outline">
+					<mat-form-field [floatLabel]="'never'" appearance="outline"  (click)="updateValidation()">
 						<mat-label>Contraseña actual</mat-label>
 						<input formControlName="password"
 							   [type]="hidePassword ? 'password' : 'text'"
 							   matInput>
 						<mat-icon matSuffix color="primary" (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+						<mat-error>
+							<span>Contraseña incorrecta</span>
+						</mat-error>
 					</mat-form-field>
 				<div class="api-error" *ngIf="!!apiError">
 					<span>Contraseña incorrecta</span>
