tg-7878 [Mejora] Alinear botones y texto

--- a/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/auth/components/update-password/update-password.component.html
@@ -2,7 +2,7 @@
 	<form [formGroup]="form">
 		<div fxLayout="column" fxLayoutAlign="center center" >
 		<mat-card>
-			<mat-card-header  fxLayout="row">
+			<mat-card-header  fxLayout="row" fxLayoutAlign="center center">
 				<mat-card-title >
 					<span>Cambio de contraseña</span>
 				</mat-card-title>
