tg-7906. [P1] En creación de turnos se visualiza ticker de Disponible para turnos online

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-attention/new-attention.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-attention/new-attention.component.html
@@ -74,8 +74,9 @@
 		</div>
 
 
-		<div fxLayout="column" >
-			<mat-checkbox (change)="changeAvailableForBooking()" [checked]="form.value.availableForBooking" *ngIf="form?.value?.medicalAttentionType?.description != SPONTANEOUS ">
+		<div fxLayout="column" *ngIf="isEnableOnlineAppointments">
+			<mat-checkbox (change)="changeAvailableForBooking()" [checked]="form.value.availableForBooking"
+						  *ngIf="isEnableOnlineAppointments && form?.value?.medicalAttentionType?.description != SPONTANEOUS">
 				<span [translate]="'turnos.agenda-setup.dialog.BOOKING'"></span>
 			</mat-checkbox>
 		</div>
