tg-7920 [P1] No se visualiza en desplegable de horario los multiplos de 22hs en adelante

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/block-agenda-range/block-agenda-range.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/block-agenda-range/block-agenda-range.component.html
@@ -1,4 +1,11 @@
-<h1 mat-dialog-title>{{ 'turnos.block.TITLE' | translate }}</h1>
+<div>
+	<div align="end">
+		<button id="cancel_button" name="cancel_button" mat-icon-button (click)="closeDialog()">
+			<mat-icon>close</mat-icon>
+		</button>
+	</div>
+	<h1 mat-dialog-title>{{ 'turnos.block.TITLE' | translate }}</h1>
+</div>
 
 <div mat-dialog-content>
 
