tg-7942 [FE] Define constantes para el uso de iconos, estados y estilos para las indicaciones y tomas de indicación

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/nursing-record/nursing-record.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/nursing-record/nursing-record.component.scss
@@ -47,3 +47,8 @@
 	background-color: rgba(255, 163, 163, 0.93);
 	color: #EB5757;
 }
+
+.red-reject {
+	background-color: rgb(255 163 163 / 51%);
+	color: #ff9a9a;
+}
