--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/list-element-item/list-element-item.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/list-element-item/list-element-item.component.scss
@@ -28,3 +28,13 @@
 	height: auto;
 	word-break: break-word;
 }
+
+.yellow {
+	background-color: #fadeae;
+	color: #FFA500;
+}
+
+.green {
+	background-color: #a1f3b4;
+	color: #27AE60;
+}
