--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup-enfermeria/nueva-consulta-dock-popup-enfermeria.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup-enfermeria/nueva-consulta-dock-popup-enfermeria.component.html
@@ -35,7 +35,7 @@
 			[title]="'historia-clinica.factores-de-riesgo-form.TITLE' | translate" icon="favorite_outlined"
 			[isEmpty]="!factoresDeRiesgoFormService.hasAtLeastOneValueLoaded()">
 			<app-factores-de-riesgo-form [showRecomendation]="true" [showTitle]="false"
-				[factoresDeRiesgoFormService]="factoresDeRiesgoFormService">
+				[factoresDeRiesgoFormService]="factoresDeRiesgoFormService" [showErrors]="true">
 			</app-factores-de-riesgo-form>
 		</app-new-consultation-expansion-section>
 
